--- a/lib/frontend/css/common.css
+++ b/lib/frontend/css/common.css
@@ -1,3 +1,9 @@
 .wp-block-media-text img{
 	max-width:100%;
 }
+.wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{
+	padding-left:0;
+}
+.wp-block-media-text.has-media-on-the-left .wp-block-media-text__content{
+	padding-right:0;
+}
