--- a/lib/css/common/common.css
+++ b/lib/css/common/common.css
@@ -1,5 +1,7 @@
-.wp-block-media-text img{
-	max-width:100%;
+.wp-block-media-text.is-image-fill img{
+	min-width:100%;
+	min-height:100%;
+	object-fit:cover;
 }
 .wp-block-media-text.has-media-on-the-right .wp-block-media-text__content{
 	padding-left:0;
