--- a/lib/css/common/common.css
+++ b/lib/css/common/common.css
@@ -1,15 +1,13 @@
-.wp-block-media-text.is-image-fill img{
-	min-width:100%;
-	min-height:100%;
-	object-fit:cover;
-}
 .wp-block-media-text.has-media-on-the-right:not(.has-background) .wp-block-media-text__content{
 	padding-left:0;
 }
 .wp-block-media-text.has-media-on-the-left:not(.has-background) .wp-block-media-text__content{
 	padding-right:0;
 }
-.wp-block-media-text.is-image-fill figure.wp-block-media-text__media>img{
+.wp-block-media-text.is-image-fill figure.wp-block-media-text__media img{
+	min-width:100%;
+	min-height:100%;
+	object-fit:cover;
 	width:auto !important;
 	height:auto !important;
 	max-width: 100% !important;
