--- a/lib/css/common/common.css
+++ b/lib/css/common/common.css
@@ -1,3 +1,6 @@
+.editor-styles-wrapper .wp-block-media-text, .wp-block-media-text:not(.alignwide):not(.alignfull) {
+	max-width:var( --sv100_sv_common-max-width-text );
+}
 .wp-block-media-text.has-media-on-the-right:not(.has-background) .wp-block-media-text__content{
 	padding-left:0;
 }
@@ -17,7 +20,7 @@
 
 /* Remove Padding on Mobile when stacked */
 @media (max-width: 600px){
-	.wp-block-media-text.is-stacked-on-mobile .wp-block-media-text__content {
+	.wp-block-media-text.is-stacked-on-mobile:not(.has-background) .wp-block-media-text__content {
 		padding: 20px 0 0 0;
 	}
 }
